fix: hide closed collapse before it has been toggled (#42)

--- a/src/components/collapse/collapse.styles.css
+++ b/src/components/collapse/collapse.styles.css
@@ -30,6 +30,10 @@
   transform: rotate(-180deg);
 }
 
+:where(.omlette-collapse-panel-container-unopened) {
+  visibility: hidden;
+}
+
 :where(.omlette-collapse-panel-container .omlette-collapse-panel-exit-done) {
   height: 0;
 }
